5.13.1
FIXES
    - Fix and error that raid buffs not disapearing

5.13.0
NEW
    - Added option for important debuffs to target and focus frame

FIXES
    - Fix some lua errors

MISC
    - Code clean up

5.12.1
FIXES
    - Fix target/focus mask overlapping
    - Fix Great Vault micro menu button interaction with dominos

MISC
    - Update locals
    - Code clean up

5.12.0
NEW
    - Added "Great Vault" Button to micromenu
    - Added datatext to gametime (hover the time on minimap)
    - Added datatext to talent micro button

FIXES
    - Fix rare ember court and chatframe lua error
    - Fix some target/foucs overlapping

MISC
    - Remove auto sell junk chat output: Blizzard os doing this now
    - Right click guild micromenu button to invite or whisper guild mebers

5.11.2
FIXES
    - Fix some gossip skin issues
    - Some reputation issues

MISC
    - Update toc

5.11.1
FIXES
    - Some setting dropdowns are not accessible

5.11.0
NEW
    - Added more info to bag and guild micromenu icons

FIXES
    - Fix some gossip skin issues
    - Module buttons are not inactive anymore
    - Fix UTF8 issue if font module is deactivated (for any reason blizzard is not supporting UTF8 if we set a default blizzard font)

5.10.0
NEW
    - Added socket frame skin
    - Added layout and functions to money tooltip (bags)
    - Immersive Questing: Right click to go one gossip back
    - Immersive Questing: Accept quest with space
    - Added worldmap skin
    - Added gossip skin
    - Added itemupgrade skin

FIXES
    - Objective tracker improvments
    - Focus frame invert is now working
    - Fix auto repair

5.9.1
FIXES
    - Torghast tooltip issue
    - Fix M+ timer overlapping (Thanks to Sethos)

5.9.0
NEW
    - Added "player frame in target frame style"
    - Immersive Questing: Trigger "Next Gossip" with space
    - Show cooldowns at bags and character correct by using our own cooldown system
    - Added toggle for player PvP indicator