@@ -11,11 +11,8 @@ local function LandingButton_OnEnter(self)
     GameTooltip:AddLine(self.description, nil, nil, nil, true)
 
     local covenantID = C_Covenants.GetActiveCovenantID()
-	if covenantID > 0 then
-        local soulbindID = C_Soulbinds.GetActiveSoulbindID()
-        if soulbindID == 0 then
-            soulbindID = Soulbinds.GetDefaultSoulbindID(covenantID)
-        end
+    local soulbindID = C_Soulbinds.GetActiveSoulbindID()
+    if covenantID > 0 and soulbindID > 0 then
         local soulbindData = C_Soulbinds.GetSoulbindData(soulbindID)
 
         -- load Soulbinds UI if needed (Blizzard one)
@@ -26,16 +23,16 @@ local function LandingButton_OnEnter(self)
         GameTooltip:AddLine(" ")
         GameTooltip:AddLine( format("|cffFFFFFF%s:|r %s", COVENANT_PREVIEW_SOULBINDS, soulbindData.name), nil, nil, nil, true)
 
-	    local nodes = soulbindData.tree.nodes
+        local nodes = soulbindData.tree.nodes
         local conduits = {}
         local traits = {}
 
         for _, node in ipairs(nodes) do
             if node.state == Enum.SoulbindNodeState.Selected then
-                if node.conduitID and node.conduitID > 0 then
-                    tinsert(conduits, {node.conduitID, node.conduitRank, node.conduitType})
-                else
-                    tinsert(traits, {node.icon, node.spellID})
+                if node.conduitID and node.conduitID > 0 and node.conduitRank and node.conduitType then
+                    tinsert(conduits, {id = node.conduitID, rank = node.conduitRank, type = node.conduitType})
+                elseif node.icon and node.spellID then
+                    tinsert(traits, {icon = node.icon, spellId = node.spellID})
                 end
             end
         end
@@ -44,12 +41,12 @@ local function LandingButton_OnEnter(self)
             GameTooltip:AddLine(" ")
             GameTooltip:AddLine(L["Conduits"], 1, 0.93, 0.73)
             for i = 1, #conduits do
-                local name, _, icon = GetSpellInfo(C_Soulbinds.GetConduitSpellID(conduits[i][1], conduits[i][2]))
-                local conduitItemLevel = C_Soulbinds.GetConduitCollectionData(conduits[i][1]).conduitItemLevel
-                local conduitQuality = C_Soulbinds.GetConduitQuality(conduits[i][1], conduits[i][2])
+                local name, _, icon = GetSpellInfo(C_Soulbinds.GetConduitSpellID(conduits[i].id, conduits[i].rank))
+                local conduitItemLevel = C_Soulbinds.GetConduitCollectionData(conduits[i].id).conduitItemLevel
+                local conduitQuality = C_Soulbinds.GetConduitQuality(conduits[i].id, conduits[i].rank)
                 local color = ITEM_QUALITY_COLORS[conduitQuality]
 
-                GameTooltip:AddLine(CreateAtlasMarkup(Soulbinds.GetConduitEmblemAtlas(conduits[i][3])) .. " [" .. conduitItemLevel .. "]  " .. AddTexture(icon) .. " " .. GW.RGBToHex(color.r, color.g, color.b) .. name .. "|r ")
+                GameTooltip:AddLine(CreateAtlasMarkup(Soulbinds.GetConduitEmblemAtlas(conduits[i].type)) .. " [" .. conduitItemLevel .. "]  " .. AddTexture(icon) .. " " .. GW.RGBToHex(color.r, color.g, color.b) .. name .. "|r ")
             end
         end
 
@@ -57,8 +54,7 @@ local function LandingButton_OnEnter(self)
             if #conduits > 0 then GameTooltip:AddLine(" ") end
             GameTooltip:AddLine(GARRISON_TRAITS, 1, 0.93, 0.73)
             for i = 1, #traits do
-
-                GameTooltip:AddLine(AddTexture(traits[i][1]) .. " " .. select(1, GetSpellInfo(traits[i][2])) .. "|r ")
+                GameTooltip:AddLine(AddTexture(traits[i].icon) .. " " .. select(1, GetSpellInfo(traits[i].spellId)) .. "|r ")
             end
         end
     end
